2008-06-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-06-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: Worked on
	  nrefactory resolver.

2008-06-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/CSharpTextEditorCompletion.cs, Parser/DomParser.cs,
	  Parser/Resolver.cs, Parser/CSharpExpressionFinder.cs, Makefile.am:
	  Worked on code completion 

2008-06-23  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix preprocessor directive
	  completion. Short out completion when indent engine says inside
	  string or comment.
	* FormattingStrategy/CSharpIndentEngine.cs: Add methods to check if
	  inside preprocessor directive or comment/string.

2008-06-23  Michael Hutchinson <mhutchinson@novell.com> 

	* FormattingStrategy/CSharpIndentEngineStack.cs,
	  FormattingStrategy/CSharpIndentEngine.cs: Capture keywords for
	  proprocessor directives. Pop #region/#endregion directives back
	  out.

2008-06-23  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Added tab == reindent function.

2008-06-20  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/CodeGenerator.cs: Implement creation of folding regions, and
	  copy workaround in ImplementMember to new ImplementMembers
	  override.

2008-06-20  Ankit Jain  <jankit@novell.com>

	* Gui/CSharpTextEditorExtension.cs (FindOverridables): Move to
	CodeRefactorer and use that.

2008-06-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs,
	  Gui/CSharpTextEditorExtension.cs: Worked on code completion with
	  the new dom.

2008-06-13  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/DomParserOld.cs,
	  Parser/DomParser.cs, Parser/CSharpExpressionFinder.cs: Worked on