@@ -1,3 +1,8 @@
+2008-07-04  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/ResolveVisitor.cs, Gui/CSharpTextEditorCompletion.cs: Worked on
+	  completion.
+
 2008-06-25  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
